force-app/main/default/objects/custom_create143__c/custom_create143__c.object-meta.xml
<CustomObject>
    <label>Custom created object143</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects143</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>