force-app/main/default/objects/custom_create143__c/fields/custom_create_143field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_143field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 143field535</label>
    <type>Checkbox</type>
</CustomField>